--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <div align="center">
-            <font size="20px">Hello World!</font>
+            <font size="20px">Stitch!</font>
             <p/>
-            <img src="cloud_skills.jpg" width="800px"/>
+            <img src="./images/stitch.png"  width="800px"/>
         </div>
     </body>
 </html>
